third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/move_field_invalid.exp

Diagnostics:
error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:13:9
   │
12 │         let f = &s.f;
   │                 ---- field `f` via local `s` previously borrowed here
13 │         move s;
   │         ^^^^^^ move attempted here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:18:9
   │
17 │         let f = &mut s.f;
   │                 -------- field `f` via local `s` previously mutably borrowed here
18 │         move s;
   │         ^^^^^^ move attempted here
19 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:23:9
   │
22 │         let f = id(&s.f);
   │                 -------- field `f` via local `s` previously borrowed here
23 │         move s;
   │         ^^^^^^ move attempted here
24 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:28:9
   │
27 │         let f = id_mut(&mut s.f);
   │                 ---------------- field `f` via local `s` previously mutably borrowed here
28 │         move s;
   │         ^^^^^^ move attempted here
29 │         *f;
   │         -- conflicting reference `f` used here
